# canopy

./: .env.default  .gitignore  .oxfmtrc.json  .oxlintrc.json  CLAUDE.md  Cargo.toml  README.md  bunfig.toml  index.html  lefthook.yml  package.json
.claude/: settings.local.json
.claude/skills/create-issue/: SKILL.md
.claude/skills/tackle-issue/: SKILL.md
.githooks/: copy-env-to-worktree.sh
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  developer-experience.yml  feature-request.yml  performance.yml  ux-improvement.yml
.github/workflows/: ci.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-app-shell-single-terminal/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-split-panes-keyboard/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-RESEARCH.md  02-UI-SPEC.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-tabs-themes-statusbar/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-git-integration-sidebar/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  (+7 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
apps/desktop/: CLAUDE.md  FRONTEND.md  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/desktop/src-tauri/: BACKEND.md  CLAUDE.md  Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/resources/: canopy-notify
apps/desktop/src-tauri/src/: agent_watcher.rs  daemon.rs  daemon_client.rs  editor.rs  error.rs  fs_watcher.rs  git.rs  github.rs  hook_installer.rs  hook_server.rs  lib.rs  main.rs  menu.rs  pty.rs
scripts/: cargo-codesign.sh  setup-dev-codesign.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  pty.rs
src/components/: CreateModal.tsx  PaneContainer.tsx  PaneHeader.tsx  Splitter.tsx  StatusBar.tsx  TabBar.tsx  Terminal.tsx  TerminalPane.tsx  ToastProvider.tsx  WorkspaceTree.tsx
src/hooks/: useTerminal.ts
src/lib/: pane-tree-ops.ts  pty.ts  terminal-cache.ts  themes.ts
src/stores/: pane-tree.ts  tabs-store.ts  terminal.ts  workspace-store.ts
(+221 files in other folders)
