[package]
name = "superagent"
version = "0.1.0"
edition = "2021"
default-run = "superagent"

[lib]
name = "superagent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "~2.10", features = ["macos-private-api"] }
portable-pty.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
git2 = "0.20"
libproc = "0.14"
sysinfo = "0.33"
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
keyring = { version = "3", features = ["apple-native"] }
tauri-plugin-opener = "2"
